added current game object to scripting input and added scripting library to main pom