@@ -1,10 +1,13 @@
 package com.boc_dev.lge_scripting;
 
 import com.boc_dev.lge_model.gcs.Registry;
+import com.boc_dev.lge_model.generated.components.ScriptObject;
 import org.luaj.vm2.Globals;
 import org.luaj.vm2.LuaValue;
 import org.luaj.vm2.lib.jse.CoerceJavaToLua;
 import org.luaj.vm2.lib.jse.JsePlatform;
+
+import java.lang.reflect.InaccessibleObjectException;
 
 public class LuaScript {
 
@@ -18,10 +21,16 @@ public class LuaScript {
 
 	}
 
-	public void call(String script, Registry registry) {
-		globals.set("registry", CoerceJavaToLua.coerce(registry));
-		LuaValue chunk = globals.loadfile(scriptFolderLocation + "\\" + script);
-		chunk.call();
+	public void call(String script, ScriptObject scriptObject, Registry registry) {
+		try {
+			globals.set("registry", CoerceJavaToLua.coerce(registry));
+			globals.set("script_object", CoerceJavaToLua.coerce(scriptObject));
+			LuaValue chunk = globals.loadfile(scriptFolderLocation + "/" + script);
+			chunk.call();
+		} catch (Exception e) {
+			// do nothing
+			// todo: this is to fix a bug in idea. For some reason, --add-opens java.base/java.util=luaj.jse.modules isn't working.
+		}
 	}
 
 }
